--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_launcher_icons: ^0.14.4
   # Audio Player
-  audioplayers: ^6.5.0
+  just_audio: ^0.10.4
   # Vibration
   vibration: ^3.1.3
   # Admob
